fix general layout and center sidebar  text

--- a/grid/03-grid-layout-3/index.html
+++ b/grid/03-grid-layout-3/index.html
@@ -10,7 +10,7 @@
   <body>
     <div class="container">
 
-      <div class="header">
+      <div class="header full-width">
         <div class="logo">Header Logo</div>
         <div class="menu">
           <ul>
@@ -93,7 +93,7 @@
         </div>
       </div>
 
-      <div class="footer">
+      <div class="footer full-width">
         <p>Copyright © The Odin Project 2021</p>
       </div>
       
